<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Main$PlaceholderFragment">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tempoLinLay">

            <android.gesture.GestureOverlayView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tempoGesture">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempo"
                    android:singleLine="false"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/bpmValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bpmValue" />


                    <TextView
                        android:id="@+id/bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tempoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/larghetto"
                    android:layout_gravity="center" />

            </LinearLayout>
    </android.gesture.GestureOverlayView>

        </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:id="@+id/tempoModBar"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/incrXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incrementXL"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="incrXL"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" />

        <Button
            android:id="@+id/incrL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incrementL"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="incrL"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" />

        <Button
            android:id="@+id/incr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="incr"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" />

        <Button
            android:id="@+id/decr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="decr"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" />
        <Button
            android:id="@+id/decrL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrementL"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="decrL"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" />
        <Button
            android:id="@+id/decrXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrementXL"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="decrXL"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/toggleTktll"
                android:id="@+id/button"
            android:onClick="toggleTktll"
            android:layout_gravity="center"
            android:textSize="30sp" />

</LinearLayout>
